--- a/tex.html
+++ b/tex.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>avc</h3>   
-    
+    <h3>avc</h3>  
+    <h3>formulario de pedido </h3> 
+    <p>aqui vai ter um formulario para o cliente </p>
 </body>
 </html>
