--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        e muito menos aqui
-    </h1>
-    <p>vendas = R$5.000</p>
+    <h1>pagina home</h1>
+    <a href="vendas.html">ir para a página de vendas</a>
+    <a href="login.html">ir para pagina de login</a>
 </body>
 </html>
