--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ainda não sei o que vai ter aqui</h1>
-    <a href="extra.html">ir para pagina</a>
+    <h1>pagina de boas vindas</h1>
+    <a href="vendas.html">ir para pagina de vendas</a>
+    <a href="pedidos.html">ir para pagina de pedidos</a>
+
 </body>
 </html>
